[tool.poetry]
name = "cchdo.snapshotter"
version = "0.1.0"
description = ""
authors = ["Andrew Barna <abarna@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.5"
rich = "^13.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
